Change how bundled libverto is linked.
Give libverto-k5ev a header file.  When using the internal verto
library, link against -lverto-k5ev and use verto_default_k5ev()
instead of verto_default(), bypassing the module loading logic and
making static builds possible.

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25166 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/config/pre.in
+++ b/src/config/pre.in
@@ -380,7 +380,7 @@ KDB5_LIB	= -lkdb5 $(KDB5_PLUGIN_LIBS)
 
 VERTO_DEPLIB	= $(VERTO_DEPLIB-@VERTO_VERSION@)
 VERTO_DEPLIB-sys = # empty
-VERTO_DEPLIB-k5	= $(TOPLIBD)/libverto$(DEPLIBEXT)
+VERTO_DEPLIB-k5	= $(TOPLIBD)/libverto-k5ev$(DEPLIBEXT) $(TOPLIBD)/libverto$(DEPLIBEXT)
 VERTO_CFLAGS	= @VERTO_CFLAGS@
 VERTO_LIBS	= @VERTO_LIBS@
 
