Go back to symlinks for liblinks.
Now that we're not using dynamic loading for libverto-k5ev, we don't
need to use hard links for liblinks, and using them would interfere
with an AFS build tree.

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25167 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/config/lib.in
+++ b/src/config/lib.in
@@ -103,7 +103,7 @@ lib$(LIBBASE)$(PFLIBEXT): $(PFOBJLISTS)
 
 $(TOPLIBD)/lib$(LIBBASE)$(STLIBEXT): lib$(LIBBASE)$(STLIBEXT)
 	$(RM) $@
-	(cd $(TOPLIBD) && $(LN) $(RELDIR)/lib$(LIBBASE)$(STLIBEXT) .)
+	(cd $(TOPLIBD) && $(LN_S) $(RELDIR)/lib$(LIBBASE)$(STLIBEXT) .)
 $(TOPLIBD)/lib$(LIBBASE)$(SHLIBEXT): lib$(LIBBASE)$(SHLIBEXT)
 	$(RM) $@
 	(cd $(TOPLIBD) && \
@@ -114,7 +114,7 @@ $(TOPLIBD)/lib$(LIBBASE)$(SHLIBSEXT): lib$(LIBBASE)$(SHLIBSEXT)
 	 $(LN_S) lib$(LIBBASE)$(SHLIBVEXT) lib$(LIBBASE)$(SHLIBSEXT))
 $(TOPLIBD)/lib$(LIBBASE)$(SHLIBVEXT): lib$(LIBBASE)$(SHLIBVEXT)
 	$(RM) $@
-	(cd $(TOPLIBD) && $(LN) $(RELDIR)/lib$(LIBBASE)$(SHLIBVEXT) .)
+	(cd $(TOPLIBD) && $(LN_S) $(RELDIR)/lib$(LIBBASE)$(SHLIBVEXT) .)
 $(TOPLIBD)/lib$(LIBBASE)$(PFLIBEXT): lib$(LIBBASE)$(PFLIBEXT)
 	$(RM) $@
 	(cd $(TOPLIBD) && $(LN_S) $(RELDIR)/lib$(LIBBASE)$(PFLIBEXT) .)
