Fix verto.h dependencies for system libverto.
When we have conditionally built bundled source, we need logic in
depfix.pl and variables in pre.in to avoid depending on the bundled
verto.h in generated dependencies.  Add that logic for verto.

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25170 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/config/pre.in
+++ b/src/config/pre.in
@@ -363,6 +363,10 @@ SS_VERSION	= @SS_VERSION@
 SS_DEPS		= $(SS_DEPS-@SS_VERSION@)
 SS_DEPS-sys	=
 SS_DEPS-k5	= $(BUILDTOP)/include/ss/ss.h $(BUILDTOP)/include/ss/ss_err.h
+VERTO_VERSION	= @VERTO_VERSION@
+VERTO_DEPS	= $(VERTO_DEPS-@VERTO_VERSION@)
+VERTO_DEPS-sys	=
+VERTO_DEPS-k5	= $(BUILDTOP)/include/verto.h
 
 # LIBS gets substituted in... e.g. -lnsl -lsocket
 
