Fix verto-k5ev.h dependencies for system libverto.
When we build with the internal verto, we include verto-k5ev.h in
order to create loops.  When we build with the system verto, we don't
include that header file.  Add depfix logic and pre.in variables to
avoid depending on verto-k5ev.h for a system verto build.

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25173 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/config/pre.in
+++ b/src/config/pre.in
@@ -367,6 +367,9 @@ VERTO_VERSION	= @VERTO_VERSION@
 VERTO_DEPS	= $(VERTO_DEPS-@VERTO_VERSION@)
 VERTO_DEPS-sys	=
 VERTO_DEPS-k5	= $(BUILDTOP)/include/verto.h
+VERTO_K5EV_DEPS	= $(VERTO_K5EV_DEPS-@VERTO_VERSION@)
+VERTO_K5EV_DEPS-sys =
+VERTO_K5EV_DEPS-k5 = $(BUILDTOP)/include/verto-k5ev.h
 
 # LIBS gets substituted in... e.g. -lnsl -lsocket
 
