--- a/src/configure.in
+++ b/src/configure.in
@@ -8,7 +8,7 @@ AC_SUBST(KRB5_VERSION)
 AC_REQUIRE_CPP
 
 AC_CACHE_CHECK(if va_copy is available, krb5_cv_va_copy,
-[AC_LINK_IFELSE([
+[AC_LINK_IFELSE([AC_LANG_SOURCE([
 #include <stdarg.h>
 void f(va_list ap) {
   va_list ap2;
@@ -20,7 +20,7 @@ int main()
 {
   f(x);
   return 0;
-}], krb5_cv_va_copy=yes, krb5_cv_va_copy=no)])
+}])], krb5_cv_va_copy=yes, krb5_cv_va_copy=no)])
 if test "$krb5_cv_va_copy" = yes; then
   AC_DEFINE(HAS_VA_COPY,1,[Define if va_copy macro or function is available.])
 fi
@@ -31,11 +31,11 @@ fi
 AC_CACHE_CHECK(if va_list objects can be copied by assignment,
 	       krb5_cv_va_simple_copy,
 [AC_COMPILE_IFELSE([
-#include <stdarg.h>
+AC_LANG_SOURCE([#include <stdarg.h>
 void f(va_list va2) {
   va_list va1;
   va1 = va2;
-}], krb5_cv_va_simple_copy=yes, krb5_cv_va_simple_copy=no)])
+}])], krb5_cv_va_simple_copy=yes, krb5_cv_va_simple_copy=no)])
 if test "$krb5_cv_va_simple_copy" = yes; then
   AC_DEFINE(CAN_COPY_VA_LIST,1,[Define if va_list objects can be simply copied by assignment.])
 fi
@@ -157,14 +157,14 @@ nss)
   AC_DEFINE(CRYPTO_IMPL_NSS,1,[Define if crypto implementation is NSS])
   save_CFLAGS=$CFLAGS
   CFLAGS="$CFLAGS $CRYPTO_IMPL_CFLAGS"
-  AC_COMPILE_IFELSE([
+  AC_COMPILE_IFELSE([AC_LANG_SOURCE([
 #include <nss.h>
 #if NSS_VMAJOR < 3 || (NSS_VMAJOR == 3 && NSS_VMINOR < 12)
 #error
 #elif NSS_VMAJOR == 3 && NSS_VMINOR == 12 && NSS_VPATCH < 9
 #error
 #endif
-  ], [], [AC_MSG_ERROR([NSS version 3.12.9 or later required.])])
+  ])], [], [AC_MSG_ERROR([NSS version 3.12.9 or later required.])])
   CFLAGS=$save_CFLAGS
   ;;
 *)
@@ -949,12 +949,12 @@ AC_ARG_ENABLE([pkinit],
 enable_pkinit=try)
 if test "$enable_pkinit" = yes || test "$enable_pkinit" = try; then
   AC_CACHE_CHECK(for a recent enough OpenSSL, k5_cv_openssl_version_okay,
-[AC_COMPILE_IFELSE([#include <openssl/opensslv.h>
+[AC_COMPILE_IFELSE([AC_LANG_SOURCE([#include <openssl/opensslv.h>
 #if OPENSSL_VERSION_NUMBER < 0x00908000L
 # error openssl is too old, need 0.9.8
 #endif
 int i = 1;
-], k5_cv_openssl_version_okay=yes, k5_cv_openssl_version_okay=no)])
+])], k5_cv_openssl_version_okay=yes, k5_cv_openssl_version_okay=no)])
   old_LIBS="$LIBS"
   AC_CHECK_LIB(crypto, PKCS7_get_signer_info)
   LIBS="$old_LIBS"
