--- a/src/plugins/preauth/pkinit/Makefile.in
+++ b/src/plugins/preauth/pkinit/Makefile.in
@@ -8,6 +8,7 @@ MODULE_INSTALL_DIR = $(KRB5_PA_MODULE_DIR)
 DEFS=@DEFS@
 
 LOCALINCLUDES = -I../../../include/krb5 -I.
+RUN_SETUP = @KRB5_RUN_ENV@
 
 LIBBASE=pkinit
 LIBMAJOR=0
@@ -29,6 +30,7 @@ STLIBOBJS= \
 	pkinit_srv.o \
 	pkinit_lib.o \
 	pkinit_clnt.o \
+        pkinit_kdf_constants.o \
 	pkinit_profile.o \
 	pkinit_identity.o \
 	pkinit_matching.o \
@@ -38,6 +40,8 @@ SRCS= \
 	$(srcdir)/pkinit_accessor.c \
 	$(srcdir)/pkinit_srv.c \
 	$(srcdir)/pkinit_lib.c \
+	$(srcdir)/pkinit_kdf_test.c \
+	$(srcdir)/pkinit_kdf_constants.c \
 	$(srcdir)/pkinit_clnt.c \
 	$(srcdir)/pkinit_profile.c \
 	$(srcdir)/pkinit_identity.c \
@@ -50,6 +54,13 @@ clean-unix:: clean-libs clean-libobjs
 
 clean::
 	$(RM) lib$(LIBBASE)$(SO_EXT)
+	$(RM) pkinit_test_kdf
+
+check-unix:: pkinit_kdf_test
+	     $(RUN_SETUP) $(VALGRIND) ./pkinit_kdf_test
+
+pkinit_kdf_test: pkinit_kdf_test.o $(STLIBOBJS) $(SHLIB_EXPDEPS)
+		 $(CC_LINK) -o $@ pkinit_kdf_test.o $(STLIBOBJS) $(SHLIB_EXPLIBS)
 
 @libnover_frag@
 @libobj_frag@
