Updated command line utilities not to complain about missing getopt() definition
Signed-off-by: Sam Hartman <hartmans@debian.org>

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25201 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/clients/kdestroy/Makefile.in
+++ b/src/clients/kdestroy/Makefile.in
@@ -2,6 +2,8 @@ mydir=clients$(S)kdestroy
 BUILDTOP=$(REL)..$(S)..
 DEFS=
 
+##WIN32##LOCALINCLUDES=-I$(BUILDTOP)\util\windows\
+
 SRCS=kdestroy.c
 
 PROG_LIBPATH=-L$(TOPLIBD)
