--- a/src/clients/kvno/Makefile.in
+++ b/src/clients/kvno/Makefile.in
@@ -2,6 +2,8 @@ mydir=clients$(S)kvno
 BUILDTOP=$(REL)..$(S)..
 DEFS=
 
+##WIN32##LOCALINCLUDES=-I$(BUILDTOP)\util\windows\
+
 SRCS=kvno.c
 
 PROG_LIBPATH=-L$(TOPLIBD)
