Added util\profile\testmod\Makefile to the list of Makefiles generated on Windows
Signed-off-by: Alexey Melnikov <aamelnikov@gmail.com>
Signed-off-by: Sam Hartman <hartmans@debian.org>

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25204 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -189,7 +189,7 @@ WINMAKEFILES=Makefile \
 	lib\krb5\rcache\Makefile \
 	lib\krb5\unicode\Makefile \
 	util\Makefile \
-	util\et\Makefile util\profile\Makefile \
+	util\et\Makefile util\profile\Makefile util\profile\testmod\Makefile \
 	util\support\Makefile \
 	util\windows\Makefile \
 	windows\Makefile windows\lib\Makefile \
@@ -296,6 +296,8 @@ WINMAKEFILES=Makefile \
 ##DOS##util\et\Makefile: util\et\Makefile.in $(MKFDEP)
 ##DOS##	$(WCONFIG) config < $@.in > $@
 ##DOS##util\profile\Makefile: util\profile\Makefile.in $(MKFDEP)
+##DOS##	$(WCONFIG) config < $@.in > $@
+##DOS##util\profile\testmod\Makefile: util\profile\testmod\Makefile.in $(MKFDEP)
 ##DOS##	$(WCONFIG) config < $@.in > $@
 ##DOS##util\support\Makefile: util\support\Makefile.in $(MKFDEP)
 ##DOS##	$(WCONFIG) config < $@.in > $@
