Fix x64 compile issues: remove bufferoverflowu.lib; this is obsolete as of VS2005SP1. Use undecorated _DllMainCRTStartup as entry point instead of _DllMainCRTStartup@12
Signed-off-by: Kevin Wasserman <kevin.wasserman@painless-security.com>
Signed-off-by: Sam Hartman <hartmans@debian.org>

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25207 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/ccapi/lib/win/Makefile.in
+++ b/src/ccapi/lib/win/Makefile.in
@@ -91,7 +91,7 @@ midl : ccs_request.h ccs_reply.h
 
 # Main program:
 $(OUTPRE)ccapi.dll: $(OBJS) ccapi.def
-	$(LINK) $(LFLAGS) -entry:_DllMainCRTStartup@12 -dll /map:$*.map /out:$@ /DEF:ccapi.def $(OBJS) \
+	$(LINK) $(LFLAGS) -entry:$(ENTRYPOINT) -dll /map:$*.map /out:$@ /DEF:ccapi.def $(OBJS) \
 	    /implib:ccapi.lib $(dllflags) $(LIBS) $(KFWLIB) $(SCLIB) rpcrt4.lib $(conlibsdll) $(conflags)
 
 ccapi.def:
