Fix string attribute unit tests.
Wrap t_stringattr in a very minimal Python test script so that libkdb5
can find the DB2 module to allocate memory.

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25223 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/lib/kdb/Makefile.in
+++ b/src/lib/kdb/Makefile.in
@@ -58,9 +58,9 @@ all-unix:: all-liblinks
 install-unix:: install-libs
 clean-unix:: clean-liblinks clean-libs clean-libobjs
 	$(RM) adb_err.c adb_err.h t_stringattr.o t_stringattr
-check-unix:: t_stringattr
-	KRB5_CONFIG=$(top_srcdir)/config-files/krb5.conf; export KRB5_CONFIG; \
-	$(RUN_SETUP) $(VALGRIND) ./t_stringattr
+
+check-pytests:: t_stringattr
+	$(RUNPYTEST) $(srcdir)/t_stringattr.py $(PYTESTFLAGS)
 
 generate-files-mac: darwin.exports
 
