Remove the correct execuatble and object file on make clean
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25232 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/plugins/preauth/pkinit/Makefile.in
+++ b/src/plugins/preauth/pkinit/Makefile.in
@@ -54,7 +54,7 @@ clean-unix:: clean-libs clean-libobjs
 
 clean::
 	$(RM) lib$(LIBBASE)$(SO_EXT)
-	$(RM) pkinit_test_kdf
+	$(RM) pkinit_kdf_test pkinit_kdf_test.o
 
 check-unix:: pkinit_kdf_test
 	$(RUN_SETUP) $(VALGRIND) ./pkinit_kdf_test
