Fixed resource file compilation in leashdll
Signed-off-by: Alexey Melnikov <aamelnikov@gmail.com>

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25252 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/windows/leashdll/Makefile.in
+++ b/src/windows/leashdll/Makefile.in
@@ -33,10 +33,10 @@ OBJS=	$(OUTPRE)AFSroutines.$(OBJEXT) \
 	$(OUTPRE)loadfuncs.$(OBJEXT)
 
 #TODO: Fix resource compilation
-#RESFILE = $(OUTPRE)lsh_pwd.res
+RESFILE = $(OUTPRE)lsh_pwd.res
 XOBJS	= $(RESFILE)
 
-RCFLAGS = /i $(BUILDTOP)\include
+RCFLAGS = -I$(BUILDTOP)\include -I$(BUILDTOP) -DLEASHDLL_LIB
 
 ###From another project inside K 1.9:
 ###VERSIONRC = $(BUILDTOP)\windows\version.rc
@@ -73,4 +73,5 @@ $(OUTPRE)$(DLL_NAME).dll: $(DEF_FILE) $(OBJS) $(XOBJS)
 
 #TODO: Add dependencies on include files here
 
-#$(RESFILE): resource.rc
+$(RESFILE): lsh_pwd.rc
+
