Updated a textual resource to match the .rc file include
Signed-off-by: Alexey Melnikov <aamelnikov@gmail.com>

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25253 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/windows/wshelper/resource.rc
+++ b/src/windows/wshelper/resource.rc
@@ -40,7 +40,7 @@ END
 
 3 TEXTINCLUDE DISCARDABLE
 BEGIN
-    "#include ""version.rc""\r\n"
+    "#include ""..\\version.rc""\r\n"
     "#include ""string.rc""\r\n"
     "\0"
 END
