Moved Windows specific include files to src/windows/include
Updated Windows specific Makefiles to search for header files in src/windows/include

Signed-off-by: Alexey Melnikov <aamelnikov@gmail.com>

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25279 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/util/wshelper/Makefile.in
+++ b/src/util/wshelper/Makefile.in
@@ -24,7 +24,7 @@ OBJS=	$(OUTPRE)dllmain.$(OBJEXT) \
 RESFILE = $(OUTPRE)resource.res
 XOBJS	= $(RESFILE)
 
-RCFLAGS = -I$(BUILDTOP)\include -I$(BUILDTOP) -DWSHELPER_LIB
+RCFLAGS = -I$(BUILDTOP)\include -I$(BUILDTOP)\windows\include -I$(BUILDTOP) -DWSHELPER_LIB
 
 ###From another project inside K 1.9:
 ###VERSIONRC = $(BUILDTOP)\windows\version.rc
@@ -33,7 +33,7 @@ RCFLAGS = -I$(BUILDTOP)\include -I$(BUILDTOP) -DWSHELPER_LIB
 
 # Set NODEBUG if building release instead of debug
 
-LOCALINCLUDES = -I$(BUILDTOP)\include
+LOCALINCLUDES = -I$(BUILDTOP)\include -I$(BUILDTOP)\windows\include
 
 WINLIBS = advapi32.lib user32.lib ws2_32.lib dnsapi.lib
 
