Use built-in modules for encrypted timestamp.
Break out the encrypted timestamp code from kdc_preauth.c and
preauth2.c into built-in modules, allowing admins to disable it and
reducing the size of the framework code.

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25319 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/kdc/Makefile.in
+++ b/src/kdc/Makefile.in
@@ -21,6 +21,7 @@ SRCS= \
 	$(srcdir)/kdc_util.c \
 	$(srcdir)/kdc_preauth.c \
 	$(srcdir)/kdc_preauth_ec.c \
+	$(srcdir)/kdc_preauth_encts.c \
 	$(srcdir)/main.c \
 	$(srcdir)/policy.c \
 	$(srcdir)/extern.c \
@@ -36,6 +37,7 @@ OBJS= \
 	kdc_util.o \
 	kdc_preauth.o \
 	kdc_preauth_ec.o \
+	kdc_preauth_encts.o \
 	main.o \
 	policy.o \
 	extern.o \
