--- a/src/plugins/preauth/pkinit/Makefile.in
+++ b/src/plugins/preauth/pkinit/Makefile.in
@@ -7,7 +7,7 @@ PROG_RPATH=$(KRB5_LIBDIR)
 MODULE_INSTALL_DIR = $(KRB5_PA_MODULE_DIR)
 DEFS=@DEFS@
 
-LOCALINCLUDES = -I../../../include/krb5 -I.
+LOCALINCLUDES = -I../../../include/krb5 -I. $(PKINIT_CRYPTO_IMPL_CFLAGS)
 RUN_SETUP = @KRB5_RUN_ENV@
 
 LIBBASE=pkinit
@@ -19,8 +19,8 @@ RELDIR=../plugins/preauth/pkinit
 SHLIB_EXPDEPS = \
 	$(TOPLIBD)/libk5crypto$(SHLIBEXT) \
 	$(TOPLIBD)/libkrb5$(SHLIBEXT)
-LIBS+= -lcrypto
-SHLIB_EXPLIBS= -lkrb5 -lcom_err -lk5crypto $(DL_LIB) $(SUPPORT_LIB) $(LIBS)
+SHLIB_EXPLIBS= -lkrb5 -lcom_err -lk5crypto $(PKINIT_CRYPTO_IMPL_LIBS) $(DL_LIB) $(SUPPORT_LIB) $(LIBS)
+DEFINES=-DPKINIT_DYNOBJEXT=\""$(PKINIT_DYNOBJEXT)"\"
 
 SHLIB_DIRS=-L$(TOPLIBD)
 SHLIB_RDIRS=$(KRB5_LIBDIR)
@@ -34,7 +34,7 @@ STLIBOBJS= \
 	pkinit_profile.o \
 	pkinit_identity.o \
 	pkinit_matching.o \
-	pkinit_crypto_openssl.o
+	pkinit_crypto_$(PKINIT_CRYPTO_IMPL).o
 
 SRCS= \
 	$(srcdir)/pkinit_accessor.c \
@@ -46,7 +46,7 @@ SRCS= \
 	$(srcdir)/pkinit_profile.c \
 	$(srcdir)/pkinit_identity.c \
 	$(srcdir)/pkinit_matching.c \
-	$(srcdir)/pkinit_crypto_openssl.c
+	$(srcdir)/pkinit_crypto_$(PKINIT_CRYPTO_IMPL).c
 
 all-unix:: all-liblinks
 install-unix:: install-libs
