Exclude more stuff from make reindent.
Apply exclusions to "make reindent" as well, to fully exclude some
files from whitespace cleanups.  Add fnmatch.c to exclusions.

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25345 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -721,15 +721,21 @@ OTHEREXCLUDES = \
 	util/profile/prof_int.h \
 	util/profile/profile.hin \
 	util/profile/profile_tcl.c \
+	util/support/fnmatch.c \
 	util/verto \
 	util/k5ev
 
 EXCLUDES = `for i in $(BSDFILES) $(OTHEREXCLUDES); do echo $$i; done | $(AWK) '{ print "-path", $$1, "-o" }'` -path /dev/null
 
+FIND_REINDENT = cd $(top_srcdir) && \
+	$(FIND) $(INDENTDIRS) \( $(EXCLUDES) \) -prune -o \
+	\( -name '*.[ch]' -o -name '*.hin' -o -name '*.[ch].in' \)
+
+show-reindentfiles::
+	($(FIND_REINDENT) -print)
+
 reindent::
-	(cd $(top_srcdir) && \
-	$(FIND) . \
-	\( -name '*.[ch]' -o -name '*.hin' -o -name '*.[ch].in' \) \
+	($(FIND_REINDENT) \
 	-print0 | $(XARGS) -0 $(EMACS) -q -batch \
 	-l util/krb5-c-style.el \
 	-l util/krb5-batch-reindent.el)
@@ -758,4 +764,3 @@ doxygen::
 	else \
 		echo "Doxygen is not installed or incorrect PATH"; \
 	fi
-
