Exclude util/wshelper from reindent.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25361 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -723,7 +723,8 @@ OTHEREXCLUDES = \
 	util/profile/profile_tcl.c \
 	util/support/fnmatch.c \
 	util/verto \
-	util/k5ev
+	util/k5ev \
+	util/wshelper
 
 EXCLUDES = `for i in $(BSDFILES) $(OTHEREXCLUDES); do echo $$i; done | $(AWK) '{ print "-path", $$1, "-o" }'` -path /dev/null
 
