ticket: 6997 target_version: 1.10 tags: pullup
Conditionalize po subdir on msgfmt, not dgetext

The presence of dgettext in libc or libintl doesn't imply that msgfmt
is installed, so conditionalize building the po subdir on whether
msgfmt is installed.

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25425 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/configure.in
+++ b/src/configure.in
@@ -66,12 +66,16 @@ LIBUTIL=-lutil
 ])
 AC_SUBST(LIBUTIL)
 
-po=
 AC_CHECK_HEADER(libintl.h, [
 	AC_SEARCH_LIBS(dgettext, intl, [
-		po=po
 		AC_DEFINE(ENABLE_NLS, 1,
 			[Define if translation functions should be used.])])])
+
+AC_CHECK_PROG(MSGFMT,msgfmt,msgfmt)
+po=
+if test x"$MSGFMT" != x; then
+	po=po
+fi
 AC_SUBST(po)
 
 # for kdc
