--- a/src/plugins/preauth/securid_sam2/Makefile.in
+++ b/src/plugins/preauth/securid_sam2/Makefile.in
@@ -28,7 +28,7 @@ STLIBOBJS=securid_sam2_main.o securid2.o
 
 SRCS= $(srcdir)/securid_sam2_main.c $(srcdir)/securid2.c 2
 
-all-unix:: all-liblinks
+all-unix:: all-libs
 install-unix:: install-libs
 clean-unix:: clean-libs clean-libobjs
 
