Clean up more stuff in make clean
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25437 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -596,7 +596,7 @@ runenv.py: pyrunenv.vals
 	cat pyrunenv.vals >> $@
 
 clean-unix::
-	$(RM) runenv.py pyrunenv.vals
+	$(RM) runenv.py runenv.pyc pyrunenv.vals
 
 COV_BUILD=	cov-build
 COV_ANALYZE=	cov-analyze
